@@ -1,21 +1,0 @@
-gem 'rake'
-
-group :test do
-  gem 'puppet-strings'
-  gem 'simp-rspec-puppet-facts', ENV.fetch('SIMP_RSPEC_PUPPET_FACTS_VERSION', '~> 2.0')
-  gem 'simp-rake-helpers', ENV.fetch('SIMP_RAKE_HELPERS_VERSION', ['>= 5.2', '< 6.0'])
-  gem 'metadata-json-lint'
-end
-
-group :development do
-  gem 'travis'
-  gem 'travis-lint'
-  gem 'travish'
-  gem 'pry'
-  gem 'pry-byebug' if Gem::Dependency.new('','>= 2.2.0').match?('',RUBY_VERSION)
-  gem 'pry-doc'
-end
-
-group :system_tests do
-  gem 'simp-beaker-helpers', ENV.fetch('SIMP_BEAKER_HELPERS_VERSION', '~> 1.10.0')
-end
